fix: [client] use 16px font-size on mobile to prevent zoom when using inputs

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -32,7 +32,15 @@
 
 :root,
 input {
-  font-size: 14px;
+  // 16px on mobile so there is no zoom when using inputs
+  font-size: 16px;
+}
+
+@media (min-width: 960px) {
+  :root,
+  input {
+    font-size: 14px;
+  }
 }
 
 .bold {
